# gtable-python

./: README.md  pyproject.toml
docs/: index.md
gtable_py/: __init__.py  _gtable.py  _layouts.py  _utils.py
gtable_py/_biobabel/: package.yaml  skill.md
gtable_py/_biobabel/anti_patterns/: mutating_returned_gtable.yaml  zero_based_indices.yaml
gtable_py/_biobabel/concepts/: gtable.yaml  gtable_cell.yaml  gtable_layout_indexing.yaml
gtable_py/_biobabel/examples/: smoke.py
gtable_py/_biobabel/idioms/: build_then_add_grob.yaml  gtable_add_padding_for_margins.yaml  gtable_add_space_between_cells.yaml  gtable_matrix_construct.yaml  rbind_cbind_for_composition.yaml
gtable_py/_biobabel/recipes/: title_plot_legend_column.py
tests/: test_r_parity.py  test_text_measurement.py
