[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtable-python"
version = "0.3.6.9000.post1"
description = "Python port of the R gtable package (tracks R gtable 0.3.6.9000)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jeffery Liu", email = "jeffliu.lucky@gmail.com" },
]
keywords = [
    "gtable",
    "grid",
    "ggplot2",
    "R-port",
    "layout",
    "visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "rgrid-python>=4.5.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "build", "twine"]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-jupyter",
]

[project.urls]
Homepage      = "https://github.com/R2pyBioinformatics/gtable_py"
Repository    = "https://github.com/R2pyBioinformatics/gtable_py"
Issues        = "https://github.com/R2pyBioinformatics/gtable_py/issues"
Documentation = "https://github.com/R2pyBioinformatics/gtable_py#readme"

[project.entry-points."biobabel.manifest"]
gtable_py = "gtable_py._biobabel:get_manifest"
[tool.hatch.build.targets.wheel]
packages = ["gtable_py"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tutorials/",
    "docs/",
    "tests/",
    "site/",
    "mkdocs.yml",
    ".github/",
    "*.egg-info/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.biobabel]
contract_class = "grammar"
